fixed alignment on desktop

--- a/styles.css
+++ b/styles.css
@@ -102,17 +102,20 @@
 }
 
 body {
-    background-color: var(--color-grey-900);
-    display: flex;
     height: 100vh;
-    padding: var(--spacing-300);
-    justify-content: center;
-    align-items: center;
 }
 
 main {
+    background-color: var(--color-grey-900);
     width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: var(--spacing-300);
+    box-sizing: border-box;
 }
+
 
 .social-links-card-container {
     display: flex;
